--- a/ms-contracts.properties
+++ b/ms-contracts.properties
@@ -7,3 +7,4 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3309/contracts_db?ser
 spring.datasource.username=gpdc_marie2
 spring.datasource.password=motdepasse
 urbanisation-si.clairprev.limiteNombreContrat=3
+eureka.client.serviceUrl.defaultZone=http://localhost:9001/eureka/
