--- a/ms-product.properties
+++ b/ms-product.properties
@@ -6,3 +6,4 @@ spring.datasource.url=jdbc:h2:mem:ref_produit_db
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto= update
 urbanisation-si.clairprev.limiteNombreProduit=3
+eureka.client.serviceUrl.defaultZone=http://localhost:9001/eureka/
