--- a/ms-assure.properties
+++ b/ms-assure.properties
@@ -1,5 +1,5 @@
 spring.application.name=ms-assure
-server.port=9997
+#server.port=9997
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 # MySQL
