--- a/ms-contracts.properties
+++ b/ms-contracts.properties
@@ -1,4 +1,4 @@
-server.port=9999
+#server.port=9999
 spring.application.name=ms-contracts
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
