--- a/ms-product.properties
+++ b/ms-product.properties
@@ -1,4 +1,4 @@
-server.port=9998
+#server.port=9998
 spring.application.name=ms-product
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
